[JBWS-4027] Initial changes for JDK9 support